Addition of some more sections to the body

--- a/home-page.html
+++ b/home-page.html
@@ -75,6 +75,36 @@
         </section>
     </div>
 
+    <div class="stats-div">
+      <img class="left-img" src="images/stats.jpg" alt="stats image">
+        <section class="stats-section body-section">
+          <h2 class="body-text">Statistics</h2>
+          <p class="body-text">See statistics and find out our little contribution<br>in diminishing crime
+          to make society a <br>better place. Also, see crime rate in your area.</p>
+          <button class="btn btn-primary body-button" type="button" name="button">Take A Peek</button>
+        </section>
+    </div>
+
+    <div class="animal-div">
+      <img class="right-img" src="images/puppy.jpg" alt="puppy image">
+        <section class="animal-section body-section">
+          <h2 class="body-text">Animal Cruelty</h2>
+          <p class="body-text">Animals are cute, aren't they?<br>Any kind of animal cruelty is punishable offence.<br>So be their voice and stand for them.</p>
+          <button class="btn btn-primary body-button" type="button" name="button">Save A Bark</button>
+        </section>
+    </div>
+
+    <div class="police-div">
+      <img class="left-img" src="images/map.jpg" alt="map image">
+        <section class="police-section body-section">
+          <h2 class="body-text">Police Station</h2>
+          <p class="body-text">Find the nearest police station.</p>
+          <p style="display: inline;">Enter pincode: </p>         <!-- change here -->
+          <input class="pincode-input" type="text" name="" value="">
+          <button class="btn btn-primary body-button" type="button" name="button">Search</button>
+        </section>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
