Added footer to home page.

--- a/home-page.html
+++ b/home-page.html
@@ -105,6 +105,39 @@
         </section>
     </div>
 
+    <p class="quote bg-dark"><i>Together we can make a better world for everyone. Just need a little help of each other.</i></p>
+    <div class="footer-div row bg-dark">
+      <div class="footer-div1 col-lg-3 col-md-4 col-sm-6">
+        <h3>Crime Bitch</h3>
+        <img class="footer-icon" src="images/001-facebook.png" alt="facebook icon">
+        <img class="footer-icon" src="images/002-instagram.png" alt="instagram icon">
+        <img class="footer-icon" src="images/003-twitter.png" alt="twitter icon">
+        <img class="footer-icon" src="images/004-github.png" alt="github icon">
+      </div>
+      <div class="footer-div2 col-lg-3 col-md-4 col-sm-6">
+        <h4 class="footer-text">Support</h4>
+        <ul class="footer-list">
+          <li class="list">Contact Us</li>
+          <li class="list">FAQ</li>
+          <li class="list">Terms & Conditions</li>
+        </ul>
+      </div>
+      <div class="footer-div3 col-lg-3 col-md-4 col-sm-6">
+        <h4 class="footer-text">Services</h4>
+        <ul class="footer-list">
+          <li class="list">Report A Crime</li>
+          <li class="list">Lost & Found</li>
+          <li class="list">Animal Cruelty</li>
+          <li class="list">Statistics</li>
+        </ul>
+      </div>
+      <div class="footer-div4 col-lg-3 col-md-4 col-sm-6">
+        <h4 class="footer-text">Leave a note for us!</h4>
+        <input class="footer-input" type="text" name="" value="">
+        <button class="btn btn-primary footer-button" type="button" name="button">Send</button>
+      </div>
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
